Fix table show-overflow-tooltip in safari

--- a/packages/theme-bonyfish/src/table.css
+++ b/packages/theme-bonyfish/src/table.css
@@ -45,10 +45,6 @@
 
     .el-tooltip__rel {
       display: block;
-
-      .cell {
-         white-space: nowrap;
-      }
     }
 
     @e empty-block {
@@ -376,7 +372,6 @@
       box-sizing: border-box;
       overflow: hidden;
       text-overflow: ellipsis;
-      white-space: normal;
       word-break: break-all;
       line-height: 24px;
       padding-left: 18px;
